[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = "0.7.7"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
chrono = { version = "0.4.38", default-features = false, features = [
  "clock",
  "serde",
] }
dotenv = "0.15.0"
garde = { version = "0.20.0", features = ["full"] }
hex = "0.4.3"
hmac = "0.12.1"
hyper = { version = "1.4.1", features = ["full"] }
jsonwebtoken = "9.3.0"
once_cell = "1.20.2"
redis = { version = "0.27.3", features = ["tokio-comp"] }
sea-orm = { version = "1.0.1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
